--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
   </head>
   <body>
+    <audio autoplay>
+      <source src="ep.mp3" type="audio/mp3">
+    </audio>
+
     <header>
       <div class="logo">
         <h2>Eat Till Kill MySelf</h2>
@@ -27,8 +31,8 @@
     <div class="nav">
       <ul>
         <li><a href="#menu">Menu </a></li>
-        <li><a href="galery">Galery </a></li>
-        <li><a hfer="contact">Contact </a></li>
+        <li><a href="#galery">Galery </a></li>
+        <li><a href="#contact">Contact </a></li>
         <div class="clear"></div>
       </ul>
     </div><!--nav-->
@@ -37,7 +41,10 @@
       <div class="showcase">
         <div class="showcase-text">
           <h2>Eat Till Kill YouSelf</h2>
-          <p>Life is a shit, but you ever can count with a good food.</p>
+          <p>Life is a shit, but you ever can count with a good food.<br>
+            This is only a generic text to reach a specific size.<br> Don't
+            worry about that, just ignore this <br> text and go to see the 
+            rest of the site</p>
         </div><!--showcase-text-->
         <div class="img-wraper">
           <div class="showcase-img">
