--- a/index.html
+++ b/index.html
@@ -103,17 +103,19 @@
     <section class="galery">
       <div class="galery-wraper">
         <h2 id="galery">Galery</h2>
-        <div class="img1">
-        </div><!--img1-->
+          <div class="thover">
+            <div class="img1">
+            </div><!--img1-->
 
-        <div class="img2">
-        </div><!--img2-->
+            <div class="img2">
+            </div><!--img2-->
 
-        <div class="img3">
-        </div><!--img3-->
+            <div class="img3">
+            </div><!--img3-->
 
-        <div class="img4">
-        </div><!--img4-->
+            <div class="img4">
+            </div><!--img4-->
+          </div><!--thover-->
       </div><!--galery-wraper-->
       <div class="clear"></div>
     </section><!--galery-->
