--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
     </section><!--presentation-->
 
     <section class="menu">
+      <button type="button" onclick="document.getElementById('hide').style.display='block'">Show Menu</button>
+      <div id="hide">
+      <button type="button" onclick="document.getElementById('hide').style.display='none'">Hide Menu</button>
+
       <h2 id="menu">Menu</h2>
       <div class="ped-wraper">
         <div class="pedido">
@@ -111,6 +115,7 @@
               </div><!--pedido-->
             </div><!--ped-wraper-->
             <div class="clear"></div>
+          </div><!--hide-->
     </section><!--menu-->
 
     <section class="galery">
@@ -153,5 +158,9 @@
     <footer>
       <h3>Eat Till Kill MySelf is a property of @mateusd7e. ©2021 All Rights Reserved.</h3>
     </footer>
+
+    <script>
+      
+    </script>
   </body>
 </html>
