--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <p>Life is a shit, but you ever can count with a good food.<br>
             This is only a generic text to reach a specific size.<br> Don't
             worry about that, just ignore this <br> text and go to see the 
-            rest of the site</p>
+            rest of the site.</p>
         </div><!--showcase-text-->
         <div class="img-wraper">
           <div class="showcase-img">
